removing depreciated code

--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -21,9 +21,8 @@
                     <button type="button" id="rectangle">Rectangle</button>
                     <button type="button" id="circle">Circle</button>
                     <button type="button" id="clear">Clear</button>
-                    <button type="submit" id="submit" >Submit</button> <!--onclick="document.location='gallery'"-->
+                    <button type="submit" id="submit" >Submit</button>
                     <input id="hiddenCanvasValue" name="hiddenCanvasValue" type="hidden" value=""></input>
-                    <input type="hidden" name="username" id="username" value=""></input>
                     <DevLabel id="RGBVal">RGBVal</DevLabel>
                 </div>
                 <div class="myDoodl">
