--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -11,6 +11,7 @@
             <h1>Today's Top Drawings</h1>
             <div id="dailyWord"> Today's topic: <%= currentPrompt %></div>
         </div>
+        <input type="text" id="doodlData" value=""></input>
         <script src="/js/gallery.js"></script>
     </body>
     <body style="background-color: #f67570;"></body>
