--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -34,9 +34,9 @@
                 <button type="button" id="settingsButton" onclick="openSettings()">
                 <img src="/images/settings.png" height="50px" width="50px">
                 </button>
-                <input type="submit" id="exitButton" >
+                <button type="submit" id="exitButton" >
                     <img src="/images/exit.png" height="50px" width="50px">
-                </input>
+                </button>
                 <div id="settingsBG">
                     <div id="settingsMain">
                         <p id="settingsTitle">
