adding button size slider to settings

--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -47,6 +47,9 @@
                                 <span class="slider round"></span>
                             </label>
                         </div>
+                        <div id="settingsSliderContainer">
+                            <input type="range" min="1" max="100" value="50" class="slider" id="buttonSize">
+                        </div>
                     </div>
                 </div>
             </section>
