--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -128,6 +128,10 @@ canvas{
   height: 0;
 }
 
+.settingsSliderContainer {
+  width: 100%;
+}
+
 .slider {
   position: absolute;
   cursor: pointer;
