--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -54,7 +54,7 @@
                             </label>
                         </div>
                         <div id="settingsSliderContainer">
-                            <input type="range" min="1" max="100" value="50" class="slider" id="buttonSize">
+                            <input type="range" min="1" max="100" value="50" class="settingsSlider" id="buttonSize">
                         </div>
                     </div>
                 </div>
