--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -16,12 +16,12 @@
                     <input id="stroke" name='stroke' type="color"></input>
                     <label for="lineWidth">Line Width</label>
                     <input id="lineWidth" name='lineWidth' type="number" value="5" min="1" max="100"></input>
-                    <button type="button" id="fill"><img src="/images/fill.png" height="50px" width="50px" class="toolbarIcon"></button>
-                    <button type="button" id="line">Line</button>
-                    <button type="button" id="rectangle"><img src="/images/rectangle.png" height="50px" width="50px" class="toolbarIcon"></button>
-                    <button type="button" id="circle"><img src="/images/circle.png" height="50px" width="50px" class="toolbarIcon"></button>
-                    <button type="button" id="clear"><img src="/images/clear.png" height="50px" width="50px" class="toolbarIcon"></button>
-                    <button type="submit" id="submit" ><img src="/images/submit.png" height="50px" width="50px" class="toolbarIcon"></button>
+                    <button type="button" id="fill" class="toolbarIcon"><img src="/images/fill.png" height="50px" width="50px"></button>
+                    <button type="button" id="line" class="toolbarIcon">Line</button>
+                    <button type="button" id="rectangle" class="toolbarIcon"><img src="/images/rectangle.png" height="50px" width="50px"></button>
+                    <button type="button" id="circle" class="toolbarIcon"><img src="/images/circle.png" height="50px" width="50px"></button>
+                    <button type="button" id="clear" class="toolbarIcon"><img src="/images/clear.png" height="50px" width="50px"></button>
+                    <button type="submit" id="submit" class="toolbarIcon" ><img src="/images/submit.png" height="50px" width="50px"></button>
                     <input id="hiddenCanvasValue" name="hiddenCanvasValue" type="hidden" value=""></input>
                     <DevLabel id="RGBVal">RGBVal</DevLabel>
                 </div>
