--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -17,7 +17,7 @@
                     <label for="lineWidth">Line Width</label>
                     <input id="lineWidth" name='lineWidth' type="number" value="5" min="1" max="100"></input>
                     <button type="button" id="fill" class="toolbarIcon"><img src="/images/fill.png" height="50px" width="50px"></button>
-                    <button type="button" id="line" class="toolbarIcon">Line</button>
+                    <button type="button" id="line" class="toolbarIcon"><img src="/images/line.png" height="50px" width="50px"></button>
                     <button type="button" id="rectangle" class="toolbarIcon"><img src="/images/rectangle.png" height="50px" width="50px"></button>
                     <button type="button" id="circle" class="toolbarIcon"><img src="/images/circle.png" height="50px" width="50px"></button>
                     <button type="button" id="clear" class="toolbarIcon"><img src="/images/clear.png" height="50px" width="50px"></button>
