attempting to fix image clicking functionality

--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -16,7 +16,7 @@
                     <input id="stroke" name='stroke' type="color"></input>
                     <label for="lineWidth">Line Width</label>
                     <input id="lineWidth" name='lineWidth' type="number" value="5" min="1" max="100"></input>
-                    <button type="button" id="fill" class="toolbarIcon" style="background:'/images/fill.png';"></button>
+                    <button type="button" id="fill" class="toolbarIcon" style="background: #1565c0 url(/images/fill.png);"></button>
                     <button type="button" id="line" class="toolbarIcon"><img src="/images/line.png" height="50px" width="50px"></button>
                     <button type="button" id="rectangle" class="toolbarIcon"><img src="/images/rectangle.png" height="50px" width="50px"></button>
                     <button type="button" id="circle" class="toolbarIcon"><img src="/images/circle.png" height="50px" width="50px"></button>
