--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -17,11 +17,11 @@
                     <label for="lineWidth">Line Width</label>
                     <input id="lineWidth" name='lineWidth' type="number" value="5" min="1" max="100"></input>
                     <button type="button" id="fill" class="toolbarIcon" style="background: #1565c0 url(/images/fill.png);background-size: cover;"></button>
-                    <button type="button" id="line" class="toolbarIcon"><img src="/images/line.png" height="50px" width="50px"></button>
-                    <button type="button" id="rectangle" class="toolbarIcon"><img src="/images/rectangle.png" height="50px" width="50px"></button>
-                    <button type="button" id="circle" class="toolbarIcon"><img src="/images/circle.png" height="50px" width="50px"></button>
-                    <button type="button" id="clear" class="toolbarIcon"><img src="/images/clear.png" height="50px" width="50px"></button>
-                    <button type="submit" id="submit" class="toolbarIcon" ><img src="/images/submit.png" height="50px" width="50px"></button>
+                    <button type="button" id="line" class="toolbarIcon" style="background: #1565c0 url(/images/line.png);background-size: cover;"></button>
+                    <button type="button" id="rectangle" class="toolbarIcon" style="background: #1565c0 url(/images/rectangle.png);background-size: cover;"></button>
+                    <button type="button" id="circle" class="toolbarIcon" style="background: #1565c0 url(/images/circle.png);background-size: cover;"></button>
+                    <button type="button" id="clear" class="toolbarIcon" style="background: #1565c0 url(/images/clear.png);background-size: cover;"></button>
+                    <button type="submit" id="submit" class="toolbarIcon"  style="background: #1565c0 url(/images/submit.png);background-size: cover;"></button>
                     <input id="hiddenCanvasValue" name="hiddenCanvasValue" type="hidden" value=""></input>
                     <DevLabel id="RGBVal">RGBVal</DevLabel>
                 </div>
