--- a/public/stylesheets/generic.css
+++ b/public/stylesheets/generic.css
@@ -79,3 +79,10 @@
             width:50px;
             height:50px
         }
+        table {
+            width: 100%;        
+        }
+        td {
+            text-align: center;
+            vertical-align: top;
+        }
