--- a/views/register.ejs
+++ b/views/register.ejs
@@ -37,6 +37,11 @@
             <input type="password" name="password" placeholder="* * * * * *" size="25" pattern=".{3,}" title="Password must be at least 3 or more characters"/><br>
             <button id="register" class="button">Register</button>
         </form>
+        <div>
+            <input type="checkbox" id="privacy" name="privacy">
+            <label for="privacy">I have read and accept the </label>
+            <a target="_blank" href = "/gdprPage" >privacy policy</a>
+        </div>
     </div>
         <script src="/js/register.js"></script>
     </body>
