--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -30,13 +30,20 @@
                 </div>
                 <div id="dailyWord"> Today's topic: <%= currentPrompt %></div>
             </form>
-            <form action="/gallery" method="GET">
+            <div id="generalTools" style="margin-right: 0; margin-left: auto;">
                 <button type="button" id="settingsButton" onclick="openSettings()">
                 <img src="/images/settings.png" height="50px" width="50px">
                 </button>
+                <form action="/gallery" method="get">
                 <button type="submit" id="exitButton" >
                     <img src="/images/exit.png" height="50px" width="50px">
                 </button>
+                </form>
+                <form action="/account" method="get">
+                    <button type="submit" id="accountButton" >
+                        <img src="/images/account.png" height="50px" width="50px">
+                    </button>
+                </form>
                 <div id="settingsBG">
                     <div id="settingsMain">
                         <p id="settingsTitle">
@@ -58,7 +65,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
         </form>
         <script type="text/javascript">
             var settingsDiv = document.getElementById("settingsBG");
