Confirm pass and keys removed

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -37,6 +37,8 @@
             <input type="password" name="password" placeholder="* * * * * *" size="25" pattern=".{3,}" title="Password must be at least 3 or more characters"/><br>
             <button id="register" class="button">Register</button>
         </form>
+        <form> Confirm Password : <input type="text" id="ConfirmPassword"> </form>
+            <div class="divider"></div>
         <div>
             <input type="checkbox" id="privacy" name="privacy">
             <label for="privacy">I have read and accept the </label>
