general tools button styling

--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -46,6 +46,11 @@
                         <img src="/images/account.png" height="50px" width="50px">
                     </button>
                 </form>
+                <form action="/logout" method="delete">
+                    <button type="submit" id="logoutButton" >
+                        <img src="/images/logout.png" height="50px" width="50px">
+                    </button>
+                </form>
                 <div id="settingsBG">
                     <div id="settingsMain">
                         <p id="settingsTitle">
