--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -108,9 +108,24 @@ canvas{
 }
 
 #settingsButton{
-  position: absolute;
-  top: 10px;
-  right: 0px;
+  background-color: #f67570;
+  border: 0px;
+  cursor: pointer;
+}
+
+#exitButton{
+  background-color: #f67570;
+  border: 0px;
+  cursor: pointer;
+}
+
+#accountButton{
+  background-color: #f67570;
+  border: 0px;
+  cursor: pointer;
+}
+
+#logoutButton{
   background-color: #f67570;
   border: 0px;
   cursor: pointer;
