--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,16 +34,13 @@
         <form action="/register" method="POST">
             <input type="name" name="name" placeholder="Username" size="25" /><br><br>
             <input type="email" name="email" placeholder="johndoer@gmail.com" size="25" /><br><br>
-            <input type="password" name="password" placeholder="* * * * * *" size="25" pattern=".{3,}" title="Password must be at least 3 or more characters"/><br>
-            <button id="register" class="button">Register</button>
-        </form>
-        <form> Confirm Password : <input type="text" id="ConfirmPassword"> </form>
-            <div class="divider"></div>
-        <div>
+            <input type="password" name="password" placeholder="password" size="25" pattern=".{3,}" title="Password must be at least 3 or more characters"/><br><br>
+            <input type="text" id="ConfirmPassword" placeholder="Confirm password" size="25"><br><br>
             <input type="checkbox" id="privacy" name="privacy">
             <label for="privacy">I have read and accept the </label>
             <a target="_blank" href = "/gdprPage" >privacy policy</a>
-        </div>
+            <button id="register" class="button">Register</button>
+        </form>
     </div>
         <script src="/js/register.js"></script>
     </body>
