--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -31,14 +31,9 @@
                 <div id="dailyWord"> Today's topic: <%= currentPrompt %></div>
             </form>
             <div id="generalTools" style="margin-right: 0; margin-left: auto;">
-                <form>
-                    <button type="button" id="settingsButton" onclick="openSettings()">
-                        <img src="/images/settings.png" height="50px" width="50px">
-                    </button>
-                </form>
-                <form action="/gallery" method="get">
-                    <button type="submit" id="exitButton" >
-                        <img src="/images/exit.png" height="50px" width="50px">
+                <form action="/logout" method="get">
+                    <button type="submit" id="logoutButton" >
+                        <img src="/images/logout.png" height="50px" width="50px">
                     </button>
                 </form>
                 <form action="/account" method="get">
@@ -46,9 +41,14 @@
                         <img src="/images/account.png" height="50px" width="50px">
                     </button>
                 </form>
-                <form action="/logout" method="delete">
-                    <button type="submit" id="logoutButton" >
-                        <img src="/images/logout.png" height="50px" width="50px">
+                <form>
+                    <button type="button" id="settingsButton" onclick="openSettings()">
+                        <img src="/images/settings.png" height="50px" width="50px">
+                    </button>
+                </form>
+                <form action="/gallery" method="get">
+                    <button type="submit" id="exitButton" >
+                        <img src="/images/gallery.png" height="50px" width="50px">
                     </button>
                 </form>
                 <div id="settingsBG">
