--- a/views/register.ejs
+++ b/views/register.ejs
@@ -36,7 +36,7 @@
             <input type="email" name="email" placeholder="johndoer@gmail.com" size="25" /><br><br>
             <input type="password" name="password" placeholder="password" size="25" pattern=".{3,}" title="Password must be at least 3 or more characters"/><br><br>
             <input type="text" id="ConfirmPassword" placeholder="Confirm password" size="25"><br><br>
-            <input type="checkbox" id="privacy" name="privacy">
+            <input type="checkbox" id="privacy" name="privacy"> <br>
             <label for="privacy">I have read and accept the </label>
             <a target="_blank" href = "/gdprPage" >privacy policy</a>
             <button id="register" class="button">Register</button>
