--- a/views/register.ejs
+++ b/views/register.ejs
@@ -35,10 +35,11 @@
             <input type="name" id="name" name="name" placeholder="Username" size="25" /><br><br>
             <input type="email" id="email" name="email" placeholder="johndoer@gmail.com" size="25" /><br><br>
             <input type="password" id="password" name="password" placeholder="password" size="25" pattern=".{3,}" title="Password must be at least 3 or more characters"/><br><br>
+            <!--
             <input type="text" id="ConfirmPassword" placeholder="Confirm password" size="25"><br><br>
             <input type="checkbox" id="privacy" name="privacy"> <br>
             <label for="privacy">I have read and accepted the </label> <br>
-            <a target="_blank" href = "/gdprPage" >privacy policy</a>
+            <a target="_blank" href = "/gdprPage" >privacy policy</a> -->
             <button id="register" class="button">Register</button>
         </form>
     </div>
