--- a/views/report.ejs
+++ b/views/report.ejs
@@ -15,16 +15,10 @@
             <h3>Reason for report:</h3>
             <form action="/report" method="post">
                 <input id="doodlID" name="doodlID" type="hidden" value=""></input>
-                <input id="reportDesc" name="reportDesc" type="hidden" value=""></input>
                 <textarea id="report" name="report" rows="10" cols="50" placeholder="Please describe the issue..."></textarea>
-                <button id="submit" type="submit" onclick="moveText()">Submit Report</button>
+                <button id="submit" type="submit">Submit Report</button>
                 <script type="text/javascript">  
                     document.getElementById("doodlID").value = '<%- doodlID %>'
-                    function moveText(){
-                        var reportDescInput = document.getElementById("reportDesc");
-                        var reportDesc = document.getElementById("report");
-                        reportDescInput.value = reportDesc.value;
-                    }
                 </script>
             </form>
         </div>
