submitReport post operation

--- a/views/report.ejs
+++ b/views/report.ejs
@@ -13,7 +13,7 @@
         </div>
         <div class="buttonPos" id="userInput" style="display: grid;">
             <h3>Reason for report:</h3>
-            <form action="/report" method="post">
+            <form action="/submitReport" method="post">
                 <input id="doodlID" name="doodlID" type="hidden" value=""></input>
                 <textarea id="report" name="report" rows="10" cols="50" placeholder="Please describe the issue..."></textarea>
                 <button id="submit" type="submit">Submit Report</button>
