--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -70,12 +70,12 @@
                         <div id="settingsSliderContainer">
                             <input type="range" min="1" max="100" value="50" class="settingsSlider" id="sizeSlider">
                         </div>
-                        <select id="backgroundColors">
+                        <select onchange="selectBackground()" id="selectBackground">
                             <option value="orange">Orange</option>
                             <option value="black">Black</option>
                             <option value="white">White</option>
                             <option value="misc">Misc</option>
-                          </select>
+                        </select>
                     </div>
                 </div>
             </div>
