--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -70,7 +70,7 @@
                         <div id="settingsSliderContainer">
                             <input type="range" min="1" max="100" value="50" class="settingsSlider" id="sizeSlider">
                         </div>
-                        <select onchange="selectBackground()" id="selectBackground">
+                        <select onchange="selectBackground()" id="selecterBackground">
                             <option value="orange">Orange</option>
                             <option value="black">Black</option>
                             <option value="white">White</option>
