--- a/views/register.ejs
+++ b/views/register.ejs
@@ -33,7 +33,7 @@
        
         <form action="/register" method="POST">
             <input type="name" id="name" name="name" placeholder="Username" size="25" /><br><br>
-            <input type="email" id="email" name="email" placeholder="johndoer@gmail.com" size="25" /><br><br>
+            <input type="email" id="email" name="email" placeholder="johndoe@gmail.com" size="25" /><br><br>
             <input type="password" id="password" name="password" placeholder="password" size="25" pattern=".{3,}" title="Password must be at least 3 or more characters"/><br><br>
             <!--
             <input type="text" id="ConfirmPassword" placeholder="Confirm password" size="25"><br><br>
