--- a/views/doodlPageGuest.ejs
+++ b/views/doodlPageGuest.ejs
@@ -16,12 +16,12 @@
                     <input id="stroke" name='stroke' type="color"></input>
                     <label for="lineWidth" class="toolbarText">Line Width</label>
                     <input id="lineWidth" name='lineWidth' type="number" value="5" min="1" max="100"></input>
-                    <button type="button" id="fill" class="toolbarIcon" style="background: #1565c0 url(/images/fill.png);background-size: cover;"></button>
-                    <button type="button" id="line" class="toolbarIcon" style="background: #1565c0 url(/images/line.png);background-size: cover;"></button>
-                    <button type="button" id="rectangle" class="toolbarIcon" style="background: #1565c0 url(/images/rectangle.png);background-size: cover;"></button>
-                    <button type="button" id="circle" class="toolbarIcon" style="background: #1565c0 url(/images/circle.png);background-size: cover;"></button>
-                    <button type="button" id="clear" class="toolbarIcon" style="background: #1565c0 url(/images/clear.png);background-size: cover;"></button>
-                    <button type="submit" id="submit" class="toolbarIcon"  style="background: #1565c0 url(/images/submit.png);background-size: cover;"></button>
+                    <button type="button" id="fill" class="toolbarIcon" style="background: #1565c0 url(/images/fill.png);background-size: cover;" title="Fill"></button>
+                    <button type="button" id="line" class="toolbarIcon" style="background: #1565c0 url(/images/line.png);background-size: cover;" title="Line"></button>
+                    <button type="button" id="rectangle" class="toolbarIcon" style="background: #1565c0 url(/images/rectangle.png);background-size: cover;" title="Rectangle"></button>
+                    <button type="button" id="circle" class="toolbarIcon" style="background: #1565c0 url(/images/circle.png);background-size: cover;" title="Circle"></button>
+                    <button type="button" id="clear" class="toolbarIcon" style="background: #1565c0 url(/images/clear.png);background-size: cover;" title="Clear"></button>
+                    <button type="submit" id="submit" class="toolbarIcon"  style="background: #1565c0 url(/images/submit.png);background-size: cover;" title="Submit"></button>
                     <input id="hiddenCanvasValue" name="hiddenCanvasValue" type="hidden" value=""></input>
                     <DevLabel id="RGBVal" class="toolbarText">RGBVal</DevLabel>
                 </div>
