--- a/views/account.ejs
+++ b/views/account.ejs
@@ -16,5 +16,55 @@
         </script>  
         <script src="/js/account.js"></script>
     </body>
+    <div id="generalTools" style="margin-right: 0; margin-left: auto;">
+        <form action="/logout" method="get">
+            <button type="submit" id="logoutButton" title="Logout" >
+                <img src="/images/logout.png" height="50px" width="50px">
+            </button>
+        </form>
+        <form>
+            <button type="button" id="settingsButton" onclick="openSettings()" title="Settings">
+                <img src="/images/settings.png" height="50px" width="50px">
+            </button>
+        </form>
+        <form action="/gallery" method="get">
+            <button type="submit" id="exitButton" title="Gallery" >
+                <img src="/images/gallery.png" height="50px" width="50px">
+            </button>
+        </form>
+        <div id="settingsBG">
+            <div id="settingsMain">
+                <p id="settingsTitle">
+                    Settings
+                </p>
+                <div id="closeSettings" title="Close Settings" onclick="closeSettings()">
+                    <p>
+                        X
+                    </p>
+                </div>
+                <div id="settingsSliderContainer">
+                    <input type="range" min="1" max="100" value="50" class="settingsSlider" id="sizeSlider">
+                </div>
+                <select onchange="selectBackground()" id="selecterBackground">
+                    <option value="orange">Orange</option>
+                    <option value="black">Black</option>
+                    <option value="white">White</option>
+                    <option value="misc">Misc</option>
+                </select>
+            </div>
+        </div>
+        <script type="text/javascript">
+            var settingsDiv = document.getElementById("settingsBG");
+            function openSettings(){
+                settingsDiv.style.display = "block";
+            }
+            function closeSettings(){
+                settingsDiv.style.display = "none";
+            }
+            function checked(){
+                settingsDiv.style.display = "none";
+            }
+        </script>
+    </div>
     <body style="background-color: #f67570;"></body>
 </html>
