--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,46 @@
                 <div class="divider"></div>
             <button id="guest" class="button" onclick="document.location='doodlPageGuest'">Continue As Guest</button>
         </div>
+        <div id="generalTools" style="margin-right: 0; margin-left: auto;">
+            <form>
+                <button type="button" id="settingsButton" onclick="openSettings()" title="Settings">
+                    <img src="/images/settings.png" height="50px" width="50px">
+                </button>
+            </form>
+            <div id="settingsBG">
+                <div id="settingsMain">
+                    <p id="settingsTitle">
+                        Settings
+                    </p>
+                    <div id="closeSettings" title="Close Settings" onclick="closeSettings()">
+                        <p>
+                            X
+                        </p>
+                    </div>
+                    <div id="settingsSliderContainer">
+                        <input type="range" min="1" max="100" value="50" class="settingsSlider" id="sizeSlider">
+                    </div>
+                    <select onchange="selectBackground()" id="selecterBackground">
+                        <option value="orange">Orange</option>
+                        <option value="black">Black</option>
+                        <option value="white">White</option>
+                        <option value="misc">Misc</option>
+                    </select>
+                </div>
+            </div>
+            <script type="text/javascript">
+                var settingsDiv = document.getElementById("settingsBG");
+                function openSettings(){
+                    settingsDiv.style.display = "block";
+                }
+                function closeSettings(){
+                    settingsDiv.style.display = "none";
+                }
+                function checked(){
+                    settingsDiv.style.display = "none";
+                }
+            </script>
+        </div>
     </body>
     <body style="background-color: #f67570;"></body>
 </html>
