--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -16,6 +16,7 @@
                     <input id="stroke" name='stroke' type="color"></input>
                     <label for="lineWidth" class="toolbarText">Line Width</label>
                     <input id="lineWidth" name='lineWidth' type="number" value="5" min="1" max="100"></input>
+                    <input type="range" min="1" max="100" value="5" class="toolSlider" id="lineSlider">
                     <button type="button" id="fill" class="toolbarIcon" style="background: #1565c0 url(/images/fill.png);background-size: cover;" title="Fill"></button>
                     <button type="button" id="line" class="toolbarIcon" style="background: #1565c0 url(/images/line.png);background-size: cover;" title="Line"></button>
                     <button type="button" id="rectangle" class="toolbarIcon" style="background: #1565c0 url(/images/rectangle.png);background-size: cover;" title="Rectangle"></button>
