--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -33,22 +33,22 @@
             </form>
             <div id="generalTools" style="margin-right: 0; margin-left: auto;">
                 <form action="/logout" method="get">
-                    <button type="submit" id="logoutButton" title="Logout" >
+                    <button type="submit" id="logoutButton" class="generalIcons" title="Logout" >
                         <img src="/images/logout.png" height="50px" width="50px">
                     </button>
                 </form>
                 <form action="/account" method="get">
-                    <button type="submit" id="accountButton" title="Account" >
+                    <button type="submit" id="accountButton" class="generalIcons" title="Account" >
                         <img src="/images/account.png" height="50px" width="50px">
                     </button>
                 </form>
                 <form>
-                    <button type="button" id="settingsButton" onclick="openSettings()" title="Settings">
+                    <button type="button" id="settingsButton" onclick="openSettings()" class="generalIcons" title="Settings">
                         <img src="/images/settings.png" height="50px" width="50px">
                     </button>
                 </form>
                 <form action="/gallery" method="get">
-                    <button type="submit" id="exitButton" title="Gallery" >
+                    <button type="submit" id="exitButton" class="generalIcons" title="Gallery" >
                         <img src="/images/gallery.png" height="50px" width="50px">
                     </button>
                 </form>
