--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -71,10 +71,10 @@
                         </div>
                         -->
                         <div id="settingsSliderContainer">
-                            <p>Toolbar Size</p>
+                            <p id="settingsToolText">Toolbar Size</p>
                             <input type="range" min="1" max="100" value="50" class="settingsSlider" id="sizeSlider">
                         </div>
-                        <p>Background Colour</p>
+                        <p id="settingsBkgText">Background Colour</p>
                         <select onchange="selectBackground()" id="selecterBackground">
                             <option value="orange">Orange</option>
                             <option value="black">Black</option>
