--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -116,11 +116,9 @@ canvas{
   font-family: sans-serif;
   font-weight: bold;
   font-size: 20px;
-  background-color: lightsteelblue;
-  padding-top: 10px;
-  padding-top: 10px;
+  color: black;
+  padding-bottom: 10px;
   margin-top: 0px;
-  border-bottom: 2px solid black;
 }
 
 #settingsBkgText{
@@ -128,11 +126,9 @@ canvas{
   font-family: sans-serif;
   font-weight: bold;
   font-size: 20px;
-  background-color: lightsteelblue;
-  padding-top: 10px;
-  padding-top: 10px;
+  color: black;
+  padding-bottom: 10px;
   margin-top: 0px;
-  border-bottom: 2px solid black;
 }
 
 #exitButton{
