--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -118,6 +118,7 @@ canvas{
   font-size: 20px;
   color: black;
   margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 #settingsBkgText{
@@ -127,6 +128,7 @@ canvas{
   font-size: 20px;
   color: black;
   margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 #exitButton{
@@ -177,7 +179,7 @@ canvas{
   opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
   -webkit-transition: .2s; /* 0.2 seconds transition on hover */
   transition: opacity .2s;
-  padding-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .slider {
