--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,8 +71,8 @@ canvas{
   border: 2px solid black;
   border-radius: 5px;
   background-color: white;
-  left: calc(100%/3);
-  top: calc(100%/3);
+  left: 50%;
+  top: 50%;
 }
 
 #closeSettings{
