--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,7 +71,7 @@ canvas{
   border: 2px solid black;
   border-radius: 5px;
   background-color: white;
-  left: 25%;
+  left: calc(100%/3);
   top: 25%;
 }
 
