adding colour picking to index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,7 +89,7 @@
                     }
                     document.body.style.backgroundColor = bkgCol;
                     document.body.style.color = txtCol;
-                    let indexButtons = document.getElementsByClassName('indexButtons');
+                    let indexButtons = document.getElementsByClassName('button');
 
                     for(var i = 0; i < indexButtons.length; i++)
                     {
